sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  val n = getNombreValeurs()
  val ecart = n
  var flag = true
  if (ecart > 1) {
    ecart = (ecart.toDouble / 1.3).toInt
  }
  var i = 0
  do {
    flag = false
    while(i+ecart<n) {
      if(plusPetit(i+ecart,i)) {
        echange(i,i+ecart)
        i += 1
        flag = true
      }
    }
  }
  while(ecart>1 || flag) 
}